# Ditto

./: .gitignore  .gitmodules  LICENSE  README.rst  config.override.example.yml  config.yml  mypy.ini  pyproject.toml  start.py  test.py
.github/: dependabot.yml
.github/_workflows/: lint.yml
.github/workflows/: lint.yml  run.yml  test.yml
cogs/core/: admin.py  info.py  reminder.py
cogs/logging/: stats.py  timezone.py
ditto/: __init__.py  bot.py  config.py  context.py  db.py  help.py  logging.py  monkeypatch.py  types.py
ditto/cogs/core/: admin.py  info.py  reminder.py
ditto/cogs/logging/: stats.py  timezone.py
ditto/core/: __init__.py  bot.py  cog.py  context.py  help.py
ditto/db/: __init__.py  emoji.py  scheduler.py  tables.py
ditto/res/: config.yml
ditto/res/cldr/: MainTimeZones.txt  TimeZoneAliases.txt
ditto/types/: __init__.py  converters.py  transformers.py  types.py
ditto/utils/: __init__.py  collections.py  commands.py  files.py  guild.py  images.py  interactions.py  load_dotenv.py  logging.py  menus.py  message.py  paginator.py  strings.py  time.py  timezones.py  users.py  views.py  webhooks.py
ditto/utils/slash/: __init__.py  checks.py  transformers.py  utils.py
ditto/web/: __init__.py  auth.py  storage.py
tests/: test_utils.py
