[tool.poetry]
name = "Ditto"
version = "0.1.0a"
description = "A Discord bot template for Discord.py version 2+"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"
packages = [
  { include = "ditto" },
  { include = "ditto/py.typed" }
]
include = ["ditto/res/*"]

[tool.poetry.dependencies]
python = "^3.9"
donphan = ">=4.3.0"
"discord.py" = {git = "https://github.com/rpokemon/discord.py", branch = "feature/slash-commands"}
PyYAML = ">=5.4.1"
discord-ext-menus = {git = "https://github.com/rapptz/discord-ext-menus"}
discord-ext-alternatives = {git = "https://github.com/ext-creators/discord-ext-alternatives", branch = "discord.py@v2"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
tzdata = { version = ">=2021.1", markers = "sys_platform == 'win32'" }
Pillow = ">=8.2.0"
parsedatetime = ">=2.6"
psutil = "^5.8.0"
humanize = ">=3.4.1"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
mypy = ">=0.800"
pytest = ">=6.2.3"

[tool.poetry.scripts]
start = "start:main"
test = "test:main"

[tool.black]
line-length = 119
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | res
)/
'''

[tool.pytest.ini_options]
addopts = "--capture=no --assert=plain --strict-markers --tb native"
testpaths = "tests"
filterwarnings = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
