[tool.poetry]
name = "Ditto"
version = "2.0.0a"
description = "A Discord bot template for Discord.py version 2+"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"
packages = [
  { include = "ditto" },
  { include = "ditto/py.typed" }
]
include = ["ditto/res/*"]

[tool.poetry.dependencies]
python = "^3.9"
donphan = ">=4.5.1"
"discord.py" = {git = "https://github.com/rapptz/discord.py"}
PyYAML = ">=5.4.1"
discord-ext-menus = {git = "https://github.com/rapptz/discord-ext-menus"}
discord-ext-alternatives = {git = "https://github.com/ext-creators/discord-ext-alternatives", branch = "discord.py@v2"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
tzdata = { version = ">=2021.1", markers = "sys_platform == 'win32'" }
Pillow = ">=8.2.0"
parsedatetime = ">=2.6"
psutil = "^5.8.0"
humanize = ">=3.4.1"
aiohttp-session = "^2.9.0"
aiohttp_security = "^0.4.0"
aiohttp-jinja2 = "^1.5"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
mypy = ">=0.800"
pytest = ">=6.2.3"

[tool.poetry-git-version-changer]
enabled = true
version-file = "ditto/__init__.py"

[tool.poetry.scripts]
start = "start:main"
test = "test:main"

[tool.black]
line-length = 119
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | res
)/
'''

[tool.pytest.ini_options]
addopts = "--capture=no --assert=plain --strict-markers --tb native"
testpaths = "tests"
filterwarnings = "default"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-git-version-changer>=1.0.4a"]
build-backend = "poetry.core.masonry.api"
